added initial documentation to channels_controller
